feat: adicionando estilo a scrollbar

--- a/apps/primeiro-app/pages/styles.css
+++ b/apps/primeiro-app/pages/styles.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* personalizar a barra em geral, aqui estou definindo 10px de largura para a barra vertical
+e 10px de altura para a barra horizontal */
+
+::-webkit-scrollbar {
+    width: 2px;
+    height: 0.5px;
+}
+
+
+/* aqui é para personalizar o fundo da barra, neste caso estou colocando um fundo cinza escuro*/
+
+ ::-webkit-scrollbar-track {
+    /* background: #333; */
+    @apply bg-gray-200
+}
+
+
+/* aqui é a alça da barra, que demonstra a altura que você está na página
+  estou colocando uma cor azul clara nela*/
+
+ ::-webkit-scrollbar-thumb {
+    /* background: #cacaca; */
+    @apply bg-gray-900
+}
